= 2010/07/14	0.71

Fix bug 58287 - close STDIN when daemonizing to complete the
detach.

= 2009/04/04	0.61

Stefan Seifert sent in a patch to make it LSB conformant.
Note: start now exits with 0 if the daemon is already running.

scips noted an error in the example program.

= 2007/08/15	0.51

Add File::Slurp dependency to Makefile.PL.   Reported
by Tom Lea <tom dot lea at zeninternet dot co dot uk>.

= 2007/03/27	0.4

Ronald J Kimball <rjk at tamias dot net> sent in
a patch to avoid accidently clobbering $0.