@@ -455,7 +455,8 @@ L<Proc::Forking>.
 
 =head1 LICENSE
 
-Copyright(C) 2006 David Muir Sharnoff <perl@dave.sharnoff.org>,
+Copyright (C) 2006-2010 David Muir Sharnoff <cpan@dave.sharnoff.org>.
+Copyright (C) 2011 Google, Inc.
 This module may be used and distributed on the same terms
 as Perl itself.
 
